2004-03-12  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	  GStreamer 0.8 doesn't exist yet, use gstreamer-0.8 with min. version
	  set to 0.7.6.

2004-03-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: update to use GStreamer 0.8
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init), (bacon_video_widget_realize),
	(bacon_video_widget_unrealize), (bacon_video_widget_expose),
	(bacon_video_widget_open): work-around the white artifacts when
	switching on to fullscreen, only save the volume if it's possible
	to save the volume to avoid getting a '0' volume when we restart
	with an audio output

2004-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: update the news

2004-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_fullscreen_mode_available):
	oops, forgot to add
	an argument to this function (thanks to Johan for spotting it)
	* src/bacon-video-widget-xine.c: (bacon_video_widget_finalize),
	(bacon_video_widget_realize), (bacon_video_widget_new):
	show a nice error when there's no video output plugin available
	* src/totem-playlist.c: (totem_playlist_error),
	(totem_playlist_save_files), (totem_playlist_init):
	* src/totem-preferences.c: (totem_action_info), (ask_show_visuals):
	* src/totem.c: (totem_action_error), (totem_action_error_and_exit),
	(on_properties1_activate):
	don't set off the separator after constructing the dialogs, fixes
	a bunch of run-time warnings

2004-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS:
	* src/bacon-video-widget-xine.c: (bacon_video_widget_play):
	patch from Fabio Bonelli <fabiobonelli@libero.it> to restore
	the auto audio stream if a file doesn't have the same one
	available (Closes: #126578)

2004-03-10  Anders Carlsson  <andersca@gnome.org>

	* src/totem-playlist.c: (totem_playlist_add_files),
	(totem_playlist_save_files):
	* src/totem.c: (on_open1_activate):
	Set default response to GTK_RESPONSE_ACCEPT so double-clicking