@@ -6,6 +6,7 @@ New features and significant updates in version...
 * Remove the (broken) automatic downloader and the CURL dependency
 * Better error handling in the GStreamer backend
 * Fix a bug in directory loading with newer glib versions
+* Unbreak NVidia TV-Out
 * Remove the builtin authentication manager to use the one provided
 by the GNOME libraries
 * Make vanity support Linux 2.6
